--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,12 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Youtube App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+
+    <title>Skytube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
